--- a/index.html
+++ b/index.html
@@ -1,8 +1,222 @@
-<html>
-	<head>
-		<title>Coming soon</title>
-	</head>
-	<body>
-		<h1>Coming soon</h1>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>W3.CSS Template</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+        body {
+            font-family: "Lato", sans-serif;
+            background-color: #f5f5f5;
+        }
+        .responsive-img {
+            width: 100%;
+            max-height: 75vh;
+            object-fit: contain;
+        }
+
+        .mySlides {
+            display: none;
+            width: 100%;
+            opacity: 0;
+            transition: opacity 1s ease-in-out;
+        }
+
+        .mySlides.w3-show {
+            display: block !important;
+            opacity: 1 !important;
+        }
+
+        hr {
+            border: 0;
+            height: 5px;
+            width: 10%;
+            background: rgba(204, 204, 204, 0.58); /* Dark gray line */
+            background-image: linear-gradient(to right, rgb(0, 173, 238), rgb(1, 3, 32));
+        }
+
+        .register-btn {
+            display: inline-block;
+            background-color: #eb60ba;
+            color: white;
+            text-align: center;
+            padding: 10px 20px; /
+            text-decoration: none;
+            font-size: 20px;
+            border-radius: 15px;
+            transition: background-color 0.3s, color 0.3s;
+            font-family: 'Montserrat', sans-serif;
+            font-weight: bold;
+        }
+
+        .register-btn:hover {
+            background-color: #00adee;
+            color: white;
+        }
+
+        h1,h2,h3,h4,h5,h6{font-family:"Montserrat",Arial,sans-serif;font-weight:400;margin:10px 0}.w3-wide{letter-spacing:0px}
+
+
+    </style>
+</head>
+<body>
+
+
+<div class="w3-content w3-white" style="max-width:1100px;">
+
+    <div class="mySlides w3-display-container w3-justifycenter">
+        <img src="img/uea1.jpg" class="responsive-img">
+    </div>
+    <div class="mySlides w3-display-container w3-center">
+        <img src="img/uea2.jpg" class="responsive-img">
+    </div>
+    <div class="mySlides w3-display-container w3-center">
+        <img src="img/uea3.jpg" class="responsive-img">
+    </div>
+    <div class="mySlides w3-display-container w3-center">
+        <img src="img/uea4.jpg" class="responsive-img">
+    </div>
+
+
+    <div class="w3-container w3-content w3-justify w3-padding-64" style="max-width:800px" id="intro">
+        <div class="w3-display-container w3-center">
+            <img src="img/uealogo2.png" class="responsive-img" style="max-width: 20vh; margin-top: 30px; margin-bottom: 50px;">
+
+        </div>
+        <h1 class="w3-center"><b>LONG COVID DATATHON</b></h1>
+        <p class="w3-opacity w3-center">UEA Campus, Norwich, United Kingdom</p>
+        <p class="w3-opacity w3-center"><i>9th-13th September 2024</i></p>
+        <div class="w3-center" style="margin-top: 20px; margin-bottom: 20px;">
+            <a href="https://forms.microsoft.com" class="register-btn">REGISTER NOW</a>
+        </div>
+
+        <hr>
+
+        <h2 class="w3-wide w3-justify">Introduction</h2>
+        <p class="w3-justify">
+            Join us in addressing the urgent challenge of Long COVID with our pioneering initiative.
+            With over 2.1 million affected individuals in the UK, Long COVID demands immediate action.
+        </p>
+
+        <hr>
+
+        <h2 class="w3-wide w3-justify">About the event</h2>
+        <p class="w3-justify">
+            This three-day hackathon and network event aims to bridge knowledge gaps and develop effective management
+            strategies. The event brings together experts from various backgrounds in a hackathon-style event at UEA
+            utilising traditional statistical techniques and cutting-edge machine learning methods.
+        </p>
+        <p class="w3-justify">
+            Aligned with NHS health priorities, we are dedicated to reducing health inequalities and leveraging digital
+            technology for healthcare solutions.
+        </p>
+
+        <hr>
+
+        <h2 class="w3-wide w3-justify">Practical Information</h2>
+        <p class="w3-justify">
+           To follow
+        </p>
+    </div>
+
+    <!-- The Programme Section -->
+    <div class="w3-black" id="programme">
+        <div class="w3-container w3-content w3-padding-64">
+            <h2 class="w3-wide w3-justify">Programme</h2>
+
+            <ul class="w3-ul w3-border w3-white w3-text-grey">
+                <li class="w3-padding">Monday 9th September <span class="w3-tag w3-red w3-margin-left w3-right">To follow</span></li>
+                <li class="w3-padding">Tuesday 10th September <span class="w3-tag w3-red w3-margin-left w3-right">To follow</span></li>
+                <li class="w3-padding">Wednesday 11th September <span class="w3-tag w3-red w3-margin-left w3-right">To follow</span></li>
+                <li class="w3-padding">Thursday 12th September <span class="w3-tag w3-red w3-margin-left w3-right">To follow</span></li>
+                <li class="w3-padding">Friday 13th September <span class="w3-tag w3-red w3-margin-left  w3-right">To follow</span></li>
+            </ul>
+            <div class="w3-center" style="margin-top: 40px;">
+                <a href="https://forms.microsoft.com" class="register-btn">REGISTER NOW</a>
+            </div>
+
+            </div>
+        </div>
+
+    <!-- The Contact Section -->
+    <div class="w3-container w3-content w3-justify w3-padding-64" style="max-width:800px" id="contact_new">
+
+        <h2 class="w3-wide w3-justify">Contact</h2>
+
+        <div class="w3-row w3-padding-32 w3-justify">
+            <div class="w3-center">
+                <div class="w3-col m6 w3-large w3-margin-bottom w3-justify">
+                    <strong>Organiser</strong>: <br /> Dr. Saber Sami <br />
+                    <i class="w3-text-grey">Associate Professor in Dementia Research</i> <br />
+                    <a href="https://www.uea.ac.uk/about/norwich-medical-school">Norwich Medical School</a> <br />
+                    University of East Anglia <br><br>
+
+                    <i class="fa fa-map-marker" style="width:30px"></i> Norwich, United Kingdom<br>
+                    <i class="fa fa-envelope" style="width:30px"> </i> Email: mail@mail.com<br>
+                </div>
+                <div class="w3-col m6">
+                    <img src="img/dr-saber-sami.jpg" class="w3-round w3-margin-bottom" alt="Dr Saber Sami" style="width:40%">
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="w3-row w3-padding-32 w3-justify">
+            <div class="w3-center">
+                <div class="w3-col m6 w3-large w3-margin-bottom w3-justify">
+                    <strong>UEA Turing University Network <br> Academic Liaison</strong>: <br /> Dr. Jason Lines<br />
+                    <i class="w3-text-grey">Associate Professor in Computing Sciences</i> <br />
+                    <a href="https://www.uea.ac.uk/about/school-of-computing-sciences">School of Computing Sciences</a> <br />
+                    University of East Anglia <br><br>
+
+                    <i class="fa fa-map-marker" style="width:30px"></i> Norwich, United Kingdom<br>
+                    <i class="fa fa-envelope" style="width:30px"> </i> Email: mail@mail.com<br>
+                </div>
+                <div class="w3-col m6">
+                    <img src="img/jl.jpg" class="w3-round w3-margin-bottom" alt="Dr Saber Sami" style="width:40%">
+                </div>
+            </div>
+        </div>
+        <div class="w3-center">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2422.0991540240348!2d1.2385088766873336!3d52.62205227208812!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d9e0d87b805801%3A0xb9b97bf00744e573!2sUniversity%20of%20East%20Anglia!5e0!3m2!1sen!2suk!4v1715252886455!5m2!1sen!2suk"
+                width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>
+</div>
+
+<!-- Footer -->
+<footer class="w3-container w3-padding-64 w3-center w3-grey w3-xlarge">
+
+    <img style="max-height: 80px; padding-right: 20px" src="img/uealogo.png">
+    <img style="max-height: 100px; padding-left: 20px" src="img/tunlogo.png">
+
+
+</footer>
+
+<script>
+    var myIndex = 0;
+    carousel();
+
+    function carousel() {
+        var i;
+        var x = document.getElementsByClassName("mySlides");
+        for (i = 0; i < x.length; i++) {
+            x[i].className = x[i].className.replace(" w3-show", "");
+            x[i].style.display = "none";
+        }
+        myIndex++;
+        if (myIndex > x.length) {myIndex = 1}
+        x[myIndex-1].style.display = "block";
+        x[myIndex-1].className += " w3-show";
+        setTimeout(carousel, 8000);
+    }
+
+</script>
+
+</body>
 </html>
