--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>UEA Long COVID Datathon</title>
+    <title>W3.CSS Template</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -100,48 +100,86 @@
 
         <h2 class="w3-wide w3-justify">Introduction</h2>
         <p class="w3-justify">
-            Join us in addressing the urgent challenge of Long COVID with our pioneering initiative.
-            With over 2.1 million affected individuals in the UK, Long COVID demands immediate action.
+            Are you ready to tackle one of the most pressing healthcare challenges of our time?
+            Join us in a groundbreaking initiative to address Long COVID, a condition that impacts million people in
+            the UK and around the world. This is your chance to make a real difference with your skills!
         </p>
 
         <hr>
 
         <h2 class="w3-wide w3-justify">About the event</h2>
         <p class="w3-justify">
-            This three-day hackathon and network event aims to bridge knowledge gaps and develop effective management
-            strategies. The event brings together experts from various backgrounds in a hackathon-style event at UEA
-            utilising traditional statistical techniques and cutting-edge machine learning methods.
+            Over three days, you'll be part of an exciting hackathon and networking event designed to bridge knowledge gaps and create innovative solutions for managing Long COVID. Whether you're passionate about data analysis, machine learning, or healthcare, this event is for you.
         </p>
         <p class="w3-justify">
-            Aligned with NHS health priorities, we are dedicated to reducing health inequalities and leveraging digital
-            technology for healthcare solutions.
+            You'll collaborate with experts from diverse fields, working together in a dynamic hackathon environment at UEA. We’ll be combining traditional statistical techniques with cutting-edge machine learning to push the boundaries of what’s possible in healthcare.
         </p>
 
         <hr>
 
-        <h2 class="w3-wide w3-justify">Practical Information</h2>
+        <h2 class="w3-wide w3-justify">Why You Should Join</h2>
         <p class="w3-justify">
-           To follow
+            This is more than just a hackathon - it's an opportunity to learn and apply your computer science skills to
+            a real-world problem, gain hands-on experience with the latest digital technologies, and contribute to
+            reducing health inequalities. Plus, you'll be aligning your work with NHS priorities, making a tangible
+            impact on the future of healthcare.
+        </p>
+        <p class="w3-justify">
+            <b>All participants will receive a certificate of participation</b>, and top projects will have the opportunity to be further developed with support from UEA and our partners.
         </p>
     </div>
 
     <!-- The Programme Section -->
     <div class="w3-black" id="programme">
-        <div class="w3-container w3-content w3-padding-64">
-            <h2 class="w3-wide w3-justify">Programme</h2>
-
+        <div class="w3-container w3-content w3-justify w3-padding-64" style="max-width:800px" id="lecs">
+            <h2 class="w3-wide w3-justify">Lecture Program - Monday September 9th</h2>
+            <p class="w3-justify">
+                We are pleased to present an exciting lineup of expert speakers for the lecture program:
+            </p>
             <ul class="w3-ul w3-border w3-white w3-text-grey">
-                <li class="w3-padding">Monday 9th September <span class="w3-tag w3-red w3-margin-left w3-right">To follow</span></li>
-                <li class="w3-padding">Tuesday 10th September <span class="w3-tag w3-red w3-margin-left w3-right">To follow</span></li>
-                <li class="w3-padding">Wednesday 11th September <span class="w3-tag w3-red w3-margin-left w3-right">To follow</span></li>
-                <li class="w3-padding">Thursday 12th September <span class="w3-tag w3-red w3-margin-left w3-right">To follow</span></li>
-                <li class="w3-padding">Friday 13th September <span class="w3-tag w3-red w3-margin-left  w3-right">To follow</span></li>
+                <li class="w3-padding"><b class="w3-text-black">Prof. Paul Hunter (University of East Anglia)</b>
+                    <br /> <em>The Changing Epidemiology of SARS-CoV-2 Infections During the Pandemic</em></li>
+                <li class="w3-padding"><b class="w3-text-black">Prof. Vassilios Vassiliou (University of East Anglia)</b>
+                    <br /> <em>COVID and Risk Factors for Long COVID</em></li>
+                <li class="w3-padding"><b class="w3-text-black">Prof. Dr. Jonas Hosp (Freiburg University)</b>
+                    <br /> <em>Post-COVID Syndromes: Insights from Brain Imaging</em></li>
+                <li class="w3-padding"><b class="w3-text-black">Prof. Jordi Matias-Guiu Antem (Madrid University)</b>
+                    <br /> <em>From Clinical Phenotyping to Therapeutic Intervention: Neuroimaging in Post-COVID Syndrome</em></li>
+
             </ul>
+<br />
+            <!-- Data session talk-->
+            <h2 class="w3-wide w3-justify">Data Session talk</h2>
+            <ul class="w3-ul w3-border w3-white w3-text-grey">
+                <li class="w3-padding"><b class="w3-text-black">Shaun Scholes (University College London)</b>
+                    <br /> <em>Modeling Health Using The English Longitudinal Study of Ageing (ELSA):
+                        An Introduction to ELSA’s COVID Data</em></li>
+
+
+            </ul>
+
+
             <div class="w3-center" style="margin-top: 40px;">
                 <a href="https://forms.microsoft.com" class="register-btn">REGISTER NOW</a>
             </div>
+        </div>
 
-            </div>
+<!--        <div class="w3-container w3-content w3-padding-64">-->
+<!--            <h2 class="w3-wide w3-justify">Programme</h2>-->
+
+<!--            <ul class="w3-ul w3-border w3-white w3-text-grey">-->
+<!--                <li class="w3-padding">Monday 9th September <span class="w3-tag w3-red w3-margin-left w3-right">To follow</span></li>-->
+<!--                <li class="w3-padding">Tuesday 10th September <span class="w3-tag w3-red w3-margin-left w3-right">To follow</span></li>-->
+<!--                <li class="w3-padding">Wednesday 11th September <span class="w3-tag w3-red w3-margin-left w3-right">To follow</span></li>-->
+<!--                <li class="w3-padding">Thursday 12th September <span class="w3-tag w3-red w3-margin-left w3-right">To follow</span></li>-->
+<!--                <li class="w3-padding">Friday 13th September <span class="w3-tag w3-red w3-margin-left  w3-right">To follow</span></li>-->
+<!--            </ul>-->
+<!--            <div class="w3-center" style="margin-top: 40px;">-->
+<!--                <a href="https://forms.microsoft.com" class="register-btn">REGISTER NOW</a>-->
+<!--            </div>-->
+
+
+<!--            </div>-->
         </div>
 
     <!-- The Contact Section -->
@@ -165,23 +203,23 @@
                 </div>
             </div>
         </div>
-        <hr>
-        <div class="w3-row w3-padding-32 w3-justify">
-            <div class="w3-center">
-                <div class="w3-col m6 w3-large w3-margin-bottom w3-justify">
-                    <strong>UEA Turing University Network <br> Academic Liaison</strong>: <br /> Dr. Jason Lines<br />
-                    <i class="w3-text-grey">Associate Professor in Computing Sciences</i> <br />
-                    <a href="https://www.uea.ac.uk/about/school-of-computing-sciences">School of Computing Sciences</a> <br />
-                    University of East Anglia <br><br>
+<!--        <hr>-->
+<!--        <div class="w3-row w3-padding-32 w3-justify">-->
+<!--            <div class="w3-center">-->
+<!--                <div class="w3-col m6 w3-large w3-margin-bottom w3-justify">-->
+<!--                    <strong>UEA Turing University Network <br> Academic Liaison</strong>: <br /> Dr. Jason Lines<br />-->
+<!--                    <i class="w3-text-grey">Associate Professor in Computing Sciences</i> <br />-->
+<!--                    <a href="https://www.uea.ac.uk/about/school-of-computing-sciences">School of Computing Sciences</a> <br />-->
+<!--                    University of East Anglia <br><br>-->
 
-                    <i class="fa fa-map-marker" style="width:30px"></i> Norwich, United Kingdom<br>
-                    <i class="fa fa-envelope" style="width:30px"> </i> Email: mail@mail.com<br>
-                </div>
-                <div class="w3-col m6">
-                    <img src="img/jl.jpg" class="w3-round w3-margin-bottom" alt="Dr Saber Sami" style="width:40%">
-                </div>
-            </div>
-        </div>
+<!--                    <i class="fa fa-map-marker" style="width:30px"></i> Norwich, United Kingdom<br>-->
+<!--                    <i class="fa fa-envelope" style="width:30px"> </i> Email: mail@mail.com<br>-->
+<!--                </div>-->
+<!--                <div class="w3-col m6">-->
+<!--                    <img src="img/jl.jpg" class="w3-round w3-margin-bottom" alt="Dr Saber Sami" style="width:40%">-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
         <div class="w3-center">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2422.0991540240348!2d1.2385088766873336!3d52.62205227208812!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d9e0d87b805801%3A0xb9b97bf00744e573!2sUniversity%20of%20East%20Anglia!5e0!3m2!1sen!2suk!4v1715252886455!5m2!1sen!2suk"
                 width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
