--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             background-color: #eb60ba;
             color: white;
             text-align: center;
-            padding: 10px 20px; /
-            text-decoration: none;
+            padding: 10px 20px;
+            text-decoration: none !important;
             font-size: 20px;
             border-radius: 15px;
             transition: background-color 0.3s, color 0.3s;
@@ -59,6 +59,7 @@
             background-color: #00adee;
             color: white;
         }
+
 
         h1,h2,h3,h4,h5,h6{font-family:"Montserrat",Arial,sans-serif;font-weight:400;margin:10px 0}.w3-wide{letter-spacing:0px}
 
