--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>W3.CSS Template</title>
+    <title>UEA Long COVID Datathon</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -197,7 +197,7 @@
                     University of East Anglia <br><br>
 
                     <i class="fa fa-map-marker" style="width:30px"></i> Norwich, United Kingdom<br>
-                    <i class="fa fa-envelope" style="width:30px"> </i> Email: mail@mail.com<br>
+                    <i class="fa fa-envelope" style="width:30px"> </i> Email: -@uea.ac.uk<br>
                 </div>
                 <div class="w3-col m6">
                     <img src="img/dr-saber-sami.jpg" class="w3-round w3-margin-bottom" alt="Dr Saber Sami" style="width:40%">
